--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 bidict==0.23.1
-blinker==1.9.0
-certifi==2024.6.2
-charset-normalizer==3.3.2
+blinker==1.8.2
 click==8.1.7
+colorama==0.4.6
+dnspython==2.6.1
+eventlet==0.37.0
 Flask==3.0.3
-Flask-SocketIO==5.4.1
+Flask-SocketIO==5.3.7
+greenlet==3.1.0
+gunicorn==23.0.0
 h11==0.14.0
-idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
-MarkupSafe==3.0.2
-python-engineio==4.10.1
+MarkupSafe==2.1.5
+packaging==24.1
+python-engineio==4.9.1
 python-socketio==5.11.4
-requests==2.32.3
-simple-websocket==1.1.0
-urllib3==2.2.2
-Werkzeug==3.1.3
+simple-websocket==1.0.0
+Werkzeug==3.0.4
 wsproto==1.2.0
